--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Portfolio</title>
+    <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
     <script src="/js/animation.js" defer></script>
     <script src="/js/color-mode.js" defer></script>
     <script src="/js/project-slideshow.js" defer></script>
