create image animation

--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
     <script src="/js/project-slideshow.js" defer></script>
     <link rel="stylesheet" href="/css/animation.css">
     <link rel="stylesheet" href="/css/color-mode.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="" id="hero"></div>
+<div id="hero">
     <h5>Hello I'm</h5>
     <h1>Michael Njoroge</h1>
     <p>Fullstack Developer</p>
 
+
     <!-- Block, Element, Modifier (BEM) -->
-    <div id="hello_animation">
+    <div id="hero_animation">
         <div id="hero_animation_img">
 
         </div>
     </div>
+</div>
     
 </body>
 </html>
