styling toggle color button

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
     <!-- Block, Element, Modifier (BEM) -->
     <div id="hero_animation">
-        <div id="hero_animation_img">
-
-        </div>
+        <div id="hero_animation_img"></div>
     </div>
+</div>
+<div id="color-mode">
+    <div id="toggle-button" class="icon"></div>
 </div>
     
 </body>
