complete about section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,35 @@
         <div id="hero_animation_img"></div>
     </div>
 </div>
+
+<nav id="grid">
+    <div id="grid_tl">
+        <div id="grid_tl_btn">About</div>
+        <div id="grid_tl_content">
+            <div class="cards">
+                <div class="cards_content">
+                    <article>
+                        <img src="./assets/icons/experience.png" alt="Experience Icon" class="icon">
+                        <h2>Experince</h2>
+                        <p>6 Months + <br> Developer <br> Experience</p>
+                    </article>
+                    <p class="cards_content_text">Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+
+                <div class="cards_content">
+                    <article>
+                        <img src="./assets/icons/education.png" alt="Educaation Icon" class="icon">
+                        <h2>Education</h2>
+                        <p>B. Sc. Information Technology</p>
+                    </article>
+                    <p class="cards_content_text">Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</nav>
+
 <div id="color-mode">
     <div id="toggle-button" class="icon"></div>
 </div>
