create experience section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </div>
 
 <nav id="grid">
+
     <div id="grid_tl">
         <div id="grid_tl_btn">About</div>
         <div id="grid_tl_content">
@@ -51,6 +52,25 @@
             </div>
         </div>
     </div>
+
+    <div id="grid_tr">
+        <div id="grid_tr_btn">Experience</div>
+        <div id="grid_tr_content">
+            <div class="cards experience">
+                    <article class="experience_skils">
+                        <h2>Frontend Development</h2>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                        </div>
+                        <div>
+                            <h2>HTML</h2>
+                            <p>Experienced</p>
+                        </div>
+                    </article>
+            </div>
+        </div>
+    </div>
+
 </nav>
 
 <div id="color-mode">
