complete top right styling

--- a/index.html
+++ b/index.html
@@ -57,15 +57,24 @@
         <div id="grid_tr_btn">Experience</div>
         <div id="grid_tr_content">
             <div class="cards experience">
-                    <article class="experience_skils">
+                    <article class="experience_skills">
                         <h2>Frontend Development</h2>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>HTML</h2>
+                                <p>Experienced</p>
+                            </div>
                         </div>
+
                         <div>
-                            <h2>HTML</h2>
-                            <p>Experienced</p>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>CSS</h2>
+                                <p>Experienced</p>
+                            </div>
                         </div>
+                       
                     </article>
             </div>
         </div>
