finish up on backend experience

--- a/index.html
+++ b/index.html
@@ -74,6 +74,66 @@
                                 <p>Experienced</p>
                             </div>
                         </div>
+
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>Javascript</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>Typescrpt</h2>
+                                <p>Basic</p>
+                            </div>
+                        </div>
+                       
+                    </article>
+
+                    <article class="experience_skills">
+                        <h2>Backend Development</h2>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>Laravel</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>Node JS</h2>
+                                <p>Basic</p>
+                            </div>
+                        </div>
+
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>Express JS</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>PHP</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h2>Git</h2>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
                        
                     </article>
             </div>
