create project section

--- a/index.html
+++ b/index.html
@@ -139,11 +139,23 @@
             </div>
         </div>
     </div>
-
+    <div id="grid_bl">
+        <div id="grid_bl_btn">Projects</div>
+    </div>
 </nav>
 
 <div id="color-mode">
-    <div id="toggle-button" class="icon"></div>
+    <div id="toggle-button" class="icon">
+        <div id="grid_bl_content">
+            <div id="grid_bl_content_projects">
+                <div class="project p-1">
+                    <img class="project_img project-1" src="assets/portfolio-projects/project-1-dark.png" alt="project 1">
+                    <h2 class="project_title">Project one</h2>
+                    <button class="btn" onclick="window.location.href=`#`">Demo</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
     
 </body>
