complete project one

--- a/index.html
+++ b/index.html
@@ -152,7 +152,14 @@
                     <img class="project_img project-1" src="assets/portfolio-projects/project-1-dark.png" alt="project 1">
                     <h2 class="project_title">Project one</h2>
                     <button class="btn" onclick="window.location.href=`#`">Demo</button>
+
+                    <button class="btn" onclick="window.location.href=`#`">Github</button>
+
                 </div>
+
+                <button class="arrow" onclick="navigateProjects(-1)">&#10094</button>
+                <button class="arrow" onclick="navigateProjects(-1)">&#10095</button>
+                
             </div>
         </div>
     </div>
