--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
         </div>
     </div>
-    
+
     <div id="grid_bl">
         <div id="grid_bl_btn">Projects</div>
         <div id="grid_bl_content">
@@ -147,6 +147,24 @@
                 <div class="project p-1">
                     <img class="project_img project-1" src="assets/portfolio-projects/project-1-dark.png" alt="project 1">
                     <h2 class="project_title">Project one</h2>
+                    <button class="btn" onclick="window.location.href=`#`">Demo</button>
+
+                    <button class="btn" onclick="window.location.href=`#`">Github</button>
+
+                </div>
+
+                <div class="project p-2">
+                    <img class="project_img project-2" src="assets/portfolio-projects/project-2-dark.png" alt="project 2">
+                    <h2 class="project_title">Project two</h2>
+                    <button class="btn" onclick="window.location.href=`#`">Demo</button>
+
+                    <button class="btn" onclick="window.location.href=`#`">Github</button>
+
+                </div>
+
+                <div class="project p-3">
+                    <img class="project_img project-3" src="assets/portfolio-projects/project-3-dark.png" alt="project 3">
+                    <h2 class="project_title">Project three</h2>
                     <button class="btn" onclick="window.location.href=`#`">Demo</button>
 
                     <button class="btn" onclick="window.location.href=`#`">Github</button>
