finish up with bottom left

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 
                 </div>
 
-                <button class="arrow" onclick="navigateProjects(-1)">&#10094</button>
-                <button class="arrow" onclick="navigateProjects(-1)">&#10095</button>
+                <button class="arrow" onclick="navigateProject(-1)">&#10094</button>
+                <button class="arrow" onclick="navigateProject(-1)">&#10095</button>
                 
             </div>
         </div>
