create bottom right

--- a/index.html
+++ b/index.html
@@ -177,7 +177,18 @@
             </div>
         </div>
     </div>
-
+    <div id="grid_br">
+        <div id="grid_br_btn">Contact</div>
+        <div id="grid_br_content">
+            <h5 class="contact-text">Get In Touch</h5>
+            <h2 class="contact-text">Contact Me</h2>
+            <div>
+                <button class="btn btn-contact" onclick="window.location.href=`mailto:mikethecoder12@gmail.com`">Email</button>
+                <button class="btn btn-contact" onclick="window.location.href=`#`">LinkedIn</button>
+            </div>
+        </div>
+    </div>
+</nav>
 
 <div id="color-mode">
     <div id="toggle-button" class="icon">
